# smartui

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: error.rs  gemini.rs  lib.rs  main.rs
src/commands/: analyze_sentiment.rs  brainstorm.rs  convert_format.rs  define.rs  explain.rs  explain_algorithm.rs  explain_code.rs  explain_concept.rs  explain_error.rs  find_command.rs  fix_typos.rs  generate_alias.rs  generate_boilerplate.rs  generate_regex.rs  generate_test.rs  list_dir.rs  mod.rs  rephrase.rs  review_text.rs  suggest_name.rs  summarize.rs  translate.rs
tests/: cli_tests.rs  test_helpers.rs
