[package]
name = "smartui"
version = "0.1.1"
edition = "2021"
authors = ["Monzer Omer <monzer.a.omer@gmail.com>"]
description = "A terminal utility that integrates with Google Gemini API"
license = "MIT"
repository = "https://github.com/monzeromer-lab/gm"
readme = "README.md"
keywords = ["cli", "gemini", "ai", "terminal"]
categories = ["command-line-utilities", "api-bindings"]
documentation = "https://docs.rs/smartui"
homepage = "https://github.com/monzeromer-lab/smartui"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
async-trait = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package.metadata.deb]
maintainer = "Monzer Omer <monzer.a.omer@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"

[package.metadata.wix]
maintainer = "Monzer Omer <monzer.a.omer@gmail.com>"
product_name = "GM CLI"
product_version = "0.1.0"
manufacturer = "Monzer Omer"
description = "A command-line utility that integrates with Google's Gemini API"
install_path = "C:\\Program Files\\GM"

[package.metadata.pkg]
maintainer = "Monzer Omer <monzer.a.omer@gmail.com>"
product_name = "GM CLI"
product_version = "0.1.0"
manufacturer = "Monzer Omer"
description = "A command-line utility that integrates with Google's Gemini API"
install_path = "/usr/local/bin"
